Pictures made better on tablet view, mobile view button error fixed

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ body {
     height: 15vw;
     margin-left: 42.5vw;
     font-size: 1.5em;
-    color: #f6f5f5;
+    color: transparent;
     margin-top: 10px;
     border: none;
     background-color: transparent;
@@ -793,6 +793,37 @@ footer p {
         font-size: 4em;
     }
 
+    #contact_form textarea {
+        height: 30vw;
+        font-size: .75em;
+    }
+
+    .imgs_container {
+        height: 50vw;
+    }
+
+    .small_img {
+        width: 22vw;
+        height: 22vw;
+    }
+    
+    .large_img {
+        width: 40vw;
+        height: 22vw;
+    }
+
+    #the_boys, #japan_band {
+        width: 40vw;
+    }
+
+    #contact_imgs, #gigs_imgs, #music_imgs {
+        height: 50vw;
+    }
+
+    #about_imgs {
+        height: 80vw;
+    }
+
     footer {
         padding-top: 80px;
     }
@@ -818,16 +849,18 @@ footer p {
         background-color: #145374;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
         margin-top: 10px;
+        padding: 3px;
     }
 
     .name img {
         width: 5vw;
         height: 5vw;
+        padding: 3px;
     }
 
     .nav2 {
         width: 75vw;
-        margin-top: 10px;
+        margin-top: 20px;
         align-items: center;
     }
 
